syntax = "proto3";

package proto;

message Tab {
  int32 id = 1;
  int32 window_id = 2;
  optional int32 group_id = 3;
  int32 index = 4;
  optional string url = 5;
  optional string title = 6;
  optional string fav_icon_url = 7;
  bool pinned = 8;
  bool active = 9;
  bool highlighted = 10;
  bool discarded = 11;
  optional bool audible = 12;

  enum TabStatus {
    TAB_STATUS_UNSPECIFIED = 0;
    TAB_STATUS_LOADING = 1;
    TAB_STATUS_COMPLETE = 2;
  }
  optional TabStatus status = 13;

  message MutedInfo {
    bool muted = 1;
    optional string reason = 2;
    optional string extension_id = 3;
  }
  optional MutedInfo muted_info = 14;
}

